src/scss/components/_callout-group-item.scss
.callout-group-item {
  padding-top: 50px;
  padding-bottom: 50px;

  @include media(sm) {
    display: flex;
    align-items: center;
  }

  @include media(lg) {
    flex-direction: column;
    text-align: center;
    height: 430px;
    padding-top: 100px;
    padding-bottom: 50px;
  }
}

.callout-group-item__header {
  @include media(sm) {
    flex: 1;
  }
}

.callout-group-item__title {
  display: block;
  font-size: 24px;
  font-family: $font-family-serif;
  margin-bottom: 18px;

  @include media(sm) {
    margin-bottom: 0;
  }

  @include media(lg) {
    font-size: 38px;
  }
}

.callout-group-item__footer {
  @include media(sm) {
    flex: 0 0 auto;
  }
}

// TODO: need to extend `.button` somehow. Currently cannot do so within a mixin
.callout-group-item__button {
  @include link-border();

  @include media(lg) {
    border: none;
    background-color: $bright-green;
    display: inline-block;
    font-family: $font-family-sans-serif;
    text-align: center;
    padding: 13px 20px;
    font-size: 16px;
    border-radius: 0;
    border: 0;
    cursor: pointer;
    transition: .2s;
    line-height: inherit;

    &:hover,
    &:focus {
      text-decoration: none;
      background-color: $middlebury-blue;
      color: $white;
    }
  }
}

